Added new paragraph about myself

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet" />
     <title>INFO2180 Lab 1</title>
 </head>
 <body>
@@ -12,11 +13,24 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
- <h2>[Your Name]</h2>
- <p>[Paragraph about myself]</p>
+ <h2>Sydonae England</h2>
+ <p>
+    My name is Sydonae England, and I’m from St. Andrew, Jamaica. 
+    My love for technology began at age 10 when I received a book 
+    called Over 1000 Fantastic Science Facts, sparking my curiosity 
+    about inventions. With the support of inspiring IT teachers, my 
+    passion for the field grew. I also enjoy swimming and pass that 
+    on by teaching kids how to swim. This past summer, I had the chance 
+    to explore different areas of technology, and web development stood 
+    out to me. It perfectly blends creativity and problem-solving, 
+    allowing me to design visually appealing, functional websites that 
+    bring ideas to life. I’m currently studying Computer Science at the 
+    University of the West Indies and look forward to specializing as a 
+    software developer.
+</p>
  </main>
  <footer>
- <p>Copyright &copy; 2020 <Your Name>.</p>
+ <p>Copyright &copy; 2020 <Sydonae England>.</p>
  </footer>
 </body>
 </html>
