Added image to the file

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
- <h2>Sydonae England</h2>
- <p>
-    My name is Sydonae England, and I’m from St. Andrew, Jamaica. 
-    My love for technology began at age 10 when I received a book 
-    called Over 1000 Fantastic Science Facts, sparking my curiosity 
-    about inventions. With the support of inspiring IT teachers, my 
-    passion for the field grew. I also enjoy swimming and pass that 
-    on by teaching kids how to swim. This past summer, I had the chance 
-    to explore different areas of technology, and web development stood 
-    out to me. It perfectly blends creativity and problem-solving, 
-    allowing me to design visually appealing, functional websites that 
-    bring ideas to life. I’m currently studying Computer Science at the 
-    University of the West Indies and look forward to specializing as a 
-    software developer.
-</p>
+    <img src="SydonaeE_picture.jpg" alt="Picture of Sydonae England" width="200" height="300">
+    <h2>Sydonae England</h2>
+    <p>
+        My name is Sydonae England, and I’m from St. Andrew, Jamaica. 
+        My love for technology began at age 10 when I received a book 
+        called Over 1000 Fantastic Science Facts, sparking my curiosity 
+        about inventions. With the support of inspiring IT teachers, my 
+        passion for the field grew. I also enjoy swimming and pass that 
+        on by teaching kids how to swim. This past summer, I had the chance 
+        to explore different areas of technology, and web development stood 
+        out to me. It perfectly blends creativity and problem-solving, 
+        allowing me to design visually appealing, functional websites that 
+        bring ideas to life. I’m currently studying Computer Science at the 
+        University of the West Indies and look forward to specializing as a 
+        software developer.
+    </p>
  </main>
  <footer>
  <p>Copyright &copy; 2020 <Sydonae England>.</p>
